--- a/album/views/_css/jquery.colorbox.css
+++ b/album/views/_css/jquery.colorbox.css
@@ -3,7 +3,8 @@
     The following rules are the styles that are consistant between themes.
     Avoid changing this area to maintain compatability with future versions of ColorBox.
 */
-#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
+#colorbox, #cboxOverlay{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
+#cboxWrapper{position:fixed;}
 #cboxOverlay{position:fixed; width:100%; height:100%;}
 #cboxMiddleLeft, #cboxBottomLeft{clear:left;}
 #cboxContent{position:relative; overflow:hidden;}
