* Fixed permissions dialog. (Closes: #1476) * Fixed error message when trying to log in with incorrect pwd. (Closes: #1512) * Removed possibility to change permission for users when access is public (Closes: #1475) * Fixed tooltip on toplevel icons. (Closes: #1490) * Todo, add missing links to iCheckbox and missing images

--- a/album/views/_css/album.css
+++ b/album/views/_css/album.css
@@ -394,6 +394,19 @@ table.ui-album-usertable
 	font-size:11px;
 	overflow:auto;
 	width:100%;
+	margin-top : 10px;
+}
+table.ui-album-perm-public
+{
+	border:1px solid #ccc;
+	border-collapse:collapse;
+	font-size:11px;
+	overflow:auto;
+	width:100%;
+	margin-top : 10px;
+}
+#fn-albummanager-perm-dialog table tbody tr td:first-child {
+	width : 75%;
 }
 
 table.ui-album-usertable tbody
